Updated from  Shivani and Varun

--- a/keepScroll.html
+++ b/keepScroll.html
@@ -12,6 +12,8 @@
     <section class="content-section section-stick">
         <div class="wrapper">
             <h3>Keep Scrolling..</h3>
+            <a href="https://google.com/"></a>
+            <p>asfdaskghdkasdukhaskdghasukhdkuashdkuashkduhaskudgaskugd</p>
         </div>
     </section>
     <section class="content-section">
